# cmake-scratch

./: CMakeLists.txt  README.md  main.cpp
adder/: CMakeLists.txt  adder.cpp  adder.h
